cart number update

--- a/src/app/customer/customer-nav/customer-nav.component.html
+++ b/src/app/customer/customer-nav/customer-nav.component.html
@@ -19,7 +19,7 @@
            
           
             <li class="nav-item">
-                <a class="nav-link  " routerLink="/customer/cart">Cart<sup id="sup1">10</sup></a>
+                <a class="nav-link  " routerLink="/customer/cart">Cart<sup id="sup1">{{totalcart}}</sup></a>
               </li>
 
               <li class="nav-item">
