--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="navb container-fluid">
+<div class=" container-fluid" id="footer">
 
     <footer style="background-color: #7eb984;">
       <div class="container p-4">
