all product card change

--- a/src/app/customer/customer-cat-show/customer-cat-show.component.html
+++ b/src/app/customer/customer-cat-show/customer-cat-show.component.html
@@ -22,7 +22,7 @@
   <div class="container ">
     <div class="row">
 
-        <div class="card col-md-3" (click)="click_All()">
+        <div class="card col-md-3" style="width:250px;position: relative;  align-self: start;"  (click)="click_All()">
             <div style="text-align: center;">
                 <img src="AD.png">
                 <h5>All products</h5>
