--- a/src/app/customer/customer-cat-show/customer-cat-show.component.html
+++ b/src/app/customer/customer-cat-show/customer-cat-show.component.html
@@ -20,7 +20,7 @@
     </button>
   </div>
   <div class="container ">
-    <div class="row">
+    <div class="row justify-content-center ">
 
         <div class="card col-md-3" style="width:250px;position: relative;  align-self: start;"  (click)="click_All()">
             <div style="text-align: center;">
