--- a/src/app/admin/admin-nav/admin-nav.component.html
+++ b/src/app/admin/admin-nav/admin-nav.component.html
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a  class="nav-link "  aria-current="page" routerLink="/admin/admin_acc" >Edit Categories</a>
+              <a  class="nav-link "  aria-current="page" routerLink="/admin/editcat" >Edit Categories</a>
             </li>
              <li class="nav-item">
               <a  class="nav-link "  aria-current="page" routerLink="/admin/editprof" >Edit Profiles</a>
