--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -43,7 +43,7 @@
     <h1 >Available Vegetables</h1>
   </div>
   <div class="container ">
-    <div class="row">
+    <div class="row justify-content-center">
 
         <!--<div class="card col-md-3" >
             <div style="text-align: center;">
