--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
-<div class=" container-fluid" id="footer">
+<div  id="footer">
 
-    <footer style="background-color: #7eb984;">
+    <footer class=" container-fluid" style="background-color: #7eb984;">
       <div class="container p-4">
         <div class="row">
           <div class="col-lg-6 col-md-12 mb-4">
@@ -45,9 +45,9 @@
           </div>
         </div>
       </div>
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      <div class="text-center p-3 container-fluid" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2020 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        <a class="text-dark container-fluid" href="https://mdbootstrap.com/">MDBootstrap.com</a>
       </div>
       <!-- Copyright -->
     </footer>
