conntact us correct

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -2,7 +2,7 @@
 <app-landing-nav></app-landing-nav>
 
 
-    <section class="vh-100 gradient-custom ">
+    <section class="vh-100 gradient-custom " style="padding: 50Px;">
 
     <div class="container  " > 
         <div class="row justify-content-center">
