--- a/src/app/admin/edit-order/edit-order.component.html
+++ b/src/app/admin/edit-order/edit-order.component.html
@@ -3,7 +3,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content ">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Title</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Order Details</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeClick()"></button>
             </div>
             <div class="modal-body">
