--- a/src/app/admin/orderdet/orderdet.component.html
+++ b/src/app/admin/orderdet/orderdet.component.html
@@ -65,7 +65,7 @@
             </div>
         
     
-            <button type="submit" class="btn btn-secondary col-sm-3 col-form-label" (click)="addtocart()" >Add to Delivery</button>
+            <button type="submit" class="btn btn-secondary col-sm-3 col-form-label"  (click)="onSubmit()">Add to Delivery</button>
     
     
             
