--- a/src/app/customer/customer-acc/customer-acc.component.html
+++ b/src/app/customer/customer-acc/customer-acc.component.html
@@ -23,10 +23,19 @@
             <div class="card-body">
               <div class="row">
                 <div class="col-sm-3">
-                  <p class="mb-0">Full Name</p>
+                  <p class="mb-0">First Name</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">Johnatan Smith</p>
+                  <p class="text-muted mb-0">{{list[0].firstName}}</p>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <p class="mb-0">Last Name</p>
+                </div>
+                <div class="col-sm-9">
+                  <p class="text-muted mb-0">{{list[0].lastName}}</p>
                 </div>
               </div>
               <hr>
@@ -35,34 +44,25 @@
                   <p class="mb-0">Email</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">example@example.com</p>
+                  <p class="text-muted mb-0">{{list[0].email}}</p>
                 </div>
               </div>
               <hr>
               <div class="row">
                 <div class="col-sm-3">
-                  <p class="mb-0">Phone</p>
+                  <p class="mb-0">NIC</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">(097) 234-5678</p>
+                  <p class="text-muted mb-0">{{list[0].niC_No}}</p>
                 </div>
               </div>
               <hr>
               <div class="row">
                 <div class="col-sm-3">
-                  <p class="mb-0">Mobile</p>
+                  <p class="mb-0">Living City</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">(098) 765-4321</p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Address</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0">Bay Area, San Francisco, CA</p>
+                  <p class="text-muted mb-0">{{list[0].living_City}}</p>
                 </div>
               </div>
             </div>
@@ -76,7 +76,7 @@
                         <p class="mb-0">Orders</p>
                       </div>
                       <div class="col-sm-9">
-                        <p class="text-muted mb-0">5</p>
+                        <p class="text-muted mb-0">{{size}}</p>
                       </div>
                     </div>
                     <hr>
@@ -85,7 +85,7 @@
                         <p class="mb-0">Completed</p>
                       </div>
                       <div class="col-sm-9">
-                        <p class="text-muted mb-0">6</p>
+                        <p class="text-muted mb-0">0</p>
                       </div>
                     </div>
                   </div>
