--- a/src/app/courier/courier-acc/courier-acc.component.html
+++ b/src/app/courier/courier-acc/courier-acc.component.html
@@ -1,1 +1,101 @@
-<p>courier-acc works!</p>
+<div class="container py-5">
+      
+  
+    <div class="row">
+      <div class="col-lg-4" >
+        <div class="card mb-4" >
+          <div class="card-body text-center">
+            <img src="AD.png" alt="avatar"
+              class="rounded-circle img-fluid" style="width: 250px; height: 250px;">
+            <h5 class="my-3">name</h5>
+            <p class="text-muted mb-1">Full Stack Developer</p>
+            <p class="text-muted mb-4">Bay Area, San Francisco, CA</p>
+            <div class="d-flex justify-content-center mb-2">
+              <button type="button" class="btn btn-outline-primary ms-1">Logout</button>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+      <div class="col-lg-8">
+        <div class="card mb-4">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Full Name</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">Johnatan Smith</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Email</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">example@example.com</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Phone</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">(097) 234-5678</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Mobile</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">(098) 765-4321</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Address</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">Bay Area, San Francisco, CA</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+              <div class="card mb-4">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Orders</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <p class="text-muted mb-0">5</p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <p class="mb-0">Completed</p>
+                    </div>
+                    <div class="col-sm-9">
+                      <p class="text-muted mb-0">6</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
+          
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <br>
+  <br>
+
