--- a/src/app/courier/courier-navbar/courier-navbar.component.html
+++ b/src/app/courier/courier-navbar/courier-navbar.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
         <img src="{{image}}" alt="" width="30" height="24" class="logo-image">
-        {{name}}'s customer Account
+        {{name}}'s Courior Account
       </a>
     
     
