--- a/src/app/courier/courier-navbar/courier-navbar.component.html
+++ b/src/app/courier/courier-navbar/courier-navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="/courior/courior-acc">
         <img src="{{image}}" alt="" width="30" height="24" class="logo-image">
         {{name}}'s Courior Account
       </a>
