--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -7,7 +7,7 @@
     <div class="container  " > 
         <div class="row justify-content-center">
             <div class="col-md-6 text-center mb-5">
-                <h2 class="heading-section" style="color: #fcfcfc;"> Your Opinion Matters.</h2>
+                <h2 class="heading-section" style="color: #fcfcfc;"> We Love to here from You.</h2>
                 <p style="color: white;">Let us know what needs to be developed.</p>
             </div>
         </div>
@@ -50,8 +50,9 @@
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-group" style="margin-top:10px">
-                                                <input type="submit" value="Send Message" class="btn btn-primary">
-                                                <div class="submitting"></div>
+                                                <input type="submit"  class="btn btn-primary" (Click)="click();">
+
+                                                
                                             </div>
                                         </div>
                                     </div>
