--- a/src/app/customer/customer-acc/customer-acc.component.html
+++ b/src/app/customer/customer-acc/customer-acc.component.html
@@ -9,8 +9,7 @@
               <img src={{image}} alt="avatar"
                 class="rounded-circle img-fluid" style="width: 250px; height: 250px;">
               <h5 class="my-3">{{name}}</h5>
-              <p class="text-muted mb-1">Full Stack Developer</p>
-              <p class="text-muted mb-4">Bay Area, San Francisco, CA</p>
+              
               <div class="d-flex justify-content-center mb-2">
                 <button type="button" class="btn btn-outline-primary ms-1">Logout</button>
               </div>
@@ -26,7 +25,7 @@
                   <p class="mb-0">First Name</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">{{list[0].firstName}}</p>
+                  <p class="text-muted mb-0">john</p>
                 </div>
               </div>
               <hr>
@@ -35,7 +34,7 @@
                   <p class="mb-0">Last Name</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">{{list[0].lastName}}</p>
+                  <p class="text-muted mb-0">perera</p>
                 </div>
               </div>
               <hr>
@@ -44,7 +43,7 @@
                   <p class="mb-0">Email</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">{{list[0].email}}</p>
+                  <p class="text-muted mb-0">john@gmai.com</p>
                 </div>
               </div>
               <hr>
@@ -53,7 +52,7 @@
                   <p class="mb-0">NIC</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">{{list[0].niC_No}}</p>
+                  <p class="text-muted mb-0">981811692v</p>
                 </div>
               </div>
               <hr>
@@ -62,7 +61,7 @@
                   <p class="mb-0">Living City</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">{{list[0].living_City}}</p>
+                  <p class="text-muted mb-0">Kalutara</p>
                 </div>
               </div>
             </div>
