--- a/src/app/farmer/farmer-acc/farmer-acc.component.html
+++ b/src/app/farmer/farmer-acc/farmer-acc.component.html
@@ -8,8 +8,7 @@
             <img src={{image}} alt="avatar"
               class="rounded-circle img-fluid" style="width: 250px; height: 250px;">
             <h5 class="my-3">{{name}}</h5>
-            <p class="text-muted mb-1">Full Stack Developer</p>
-            <p class="text-muted mb-4">Bay Area, San Francisco, CA</p>
+            
             <div class="d-flex justify-content-center mb-2">
               <button type="button" class="btn btn-outline-primary ms-1">Logout</button>
             </div>
@@ -25,7 +24,7 @@
                 <p class="mb-0">Full Name</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">Johnatan Smith</p>
+                <p class="text-muted mb-0">Namal Rajapakse</p>
               </div>
             </div>
             <hr>
@@ -34,7 +33,7 @@
                 <p class="mb-0">Email</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">example@example.com</p>
+                <p class="text-muted mb-0">namal@gmail.com</p>
               </div>
             </div>
             <hr>
@@ -43,25 +42,18 @@
                 <p class="mb-0">Phone</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">(097) 234-5678</p>
+                <p class="text-muted mb-0">077 6980803</p>
               </div>
             </div>
             <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <p class="mb-0">Mobile</p>
-              </div>
-              <div class="col-sm-9">
-                <p class="text-muted mb-0">(098) 765-4321</p>
-              </div>
-            </div>
+            
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">Address</p>
+                <p class="mb-0">Living City</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">Bay Area, San Francisco, CA</p>
+                <p class="text-muted mb-0">Hambantota</p>
               </div>
             </div>
           </div>
@@ -75,7 +67,7 @@
                       <p class="mb-0">Orders</p>
                     </div>
                     <div class="col-sm-9">
-                      <p class="text-muted mb-0">5</p>
+                      <p class="text-muted mb-0">4</p>
                     </div>
                   </div>
                   <hr>
@@ -84,7 +76,7 @@
                       <p class="mb-0">Completed</p>
                     </div>
                     <div class="col-sm-9">
-                      <p class="text-muted mb-0">6</p>
+                      <p class="text-muted mb-0">2</p>
                     </div>
                   </div>
                 </div>
