--- a/src/app/farmer/farmer-navbar/farmer-navbar.component.html
+++ b/src/app/farmer/farmer-navbar/farmer-navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/farmer">
+    <a class="navbar-brand" href="/farmer/farmer_acc">
       <img src={{image}} alt="" width="30" height="24" class="logo-image">
       {{name}}'s Farmer Account
     </a>
