--- a/src/app/farmer/farmer-acc/farmer-acc.component.html
+++ b/src/app/farmer/farmer-acc/farmer-acc.component.html
@@ -21,10 +21,10 @@
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">Full Name</p>
+                <p class="mb-0">Name</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">Namal Rajapakse</p>
+                <p class="text-muted mb-0">{{firstname}}</p>
               </div>
             </div>
             <hr>
@@ -33,27 +33,20 @@
                 <p class="mb-0">Email</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">namal@gmail.com</p>
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <p class="mb-0">Phone</p>
-              </div>
-              <div class="col-sm-9">
-                <p class="text-muted mb-0">077 6980803</p>
+                <p class="text-muted mb-0">{{Email}}</p>
               </div>
             </div>
             <hr>
             
-            <hr>
+            
+            
+            
             <div class="row">
               <div class="col-sm-3">
                 <p class="mb-0">Living City</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">Hambantota</p>
+                <p class="text-muted mb-0">{{Livingcity}}</p>
               </div>
             </div>
           </div>
@@ -67,7 +60,7 @@
                       <p class="mb-0">Orders</p>
                     </div>
                     <div class="col-sm-9">
-                      <p class="text-muted mb-0">4</p>
+                      <p class="text-muted mb-0">{{size}}</p>
                     </div>
                   </div>
                   <hr>
