--- a/src/app/customer-login/customer-login.component.html
+++ b/src/app/customer-login/customer-login.component.html
@@ -9,7 +9,7 @@
               <div class="mb-md-5 mt-md-4 pb-5">
   
                 <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                <p class="text-white-50 mb-5">Please enter your email and password to login as customer!</p>
+                <p class="text-white-50 mb-5">Please enter your email and password to login!</p>
               <form [formGroup]="form"  (ngSubmit)="onSubmit()">
   
                 <div class="form-outline form-white mb-4 form-group">
