--- a/src/app/farmer/farmer-acc/farmer-acc.component.html
+++ b/src/app/farmer/farmer-acc/farmer-acc.component.html
@@ -10,7 +10,7 @@
             <h5 class="my-3">{{name}}</h5>
             
             <div class="d-flex justify-content-center mb-2">
-              <button type="button" class="btn btn-outline-primary ms-1">Logout</button>
+              <button type="button" class="btn btn-outline-primary ms-1" (click)="loggout()">Logout</button>
             </div>
           </div>
         </div>
@@ -57,7 +57,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col-sm-3">
-                      <p class="mb-0">Orders</p>
+                      <p class="mb-0">Pending Orders</p>
                     </div>
                     <div class="col-sm-9">
                       <p class="text-muted mb-0">{{size}}</p>
@@ -66,7 +66,7 @@
                   <hr>
                   <div class="row">
                     <div class="col-sm-3">
-                      <p class="mb-0">Completed</p>
+                      <p class="mb-0">Completed Orders</p>
                     </div>
                     <div class="col-sm-9">
                       <p class="text-muted mb-0">2</p>
