--- a/src/app/courier/courier-acc/courier-acc.component.html
+++ b/src/app/courier/courier-acc/courier-acc.component.html
@@ -5,13 +5,13 @@
       <div class="col-lg-4" >
         <div class="card mb-4" >
           <div class="card-body text-center">
-            <img src="AD.png" alt="avatar"
+            <img src="{{image}}" alt="avatar"
               class="rounded-circle img-fluid" style="width: 250px; height: 250px;">
-            <h5 class="my-3">name</h5>
-            <p class="text-muted mb-1">Full Stack Developer</p>
-            <p class="text-muted mb-4">Bay Area, San Francisco, CA</p>
+            <h5 class="my-3">{{firstname}}</h5>
+            <p class="text-muted mb-1">{{Email}}</p>
+            
             <div class="d-flex justify-content-center mb-2">
-              <button type="button" class="btn btn-outline-primary ms-1">Logout</button>
+              <button type="button" class="btn btn-outline-primary ms-1" (click)="loggout()">Logout</button>
             </div>
           </div>
         </div>
@@ -25,7 +25,7 @@
                 <p class="mb-0">Full Name</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">Johnatan Smith</p>
+                <p class="text-muted mb-0">{{firstname}} {{Lastname}}</p>
               </div>
             </div>
             <hr>
@@ -34,7 +34,7 @@
                 <p class="mb-0">Email</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">example@example.com</p>
+                <p class="text-muted mb-0">{{Email}}</p>
               </div>
             </div>
             <hr>
@@ -47,21 +47,13 @@
               </div>
             </div>
             <hr>
+          
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">Mobile</p>
+                <p class="mb-0">Living City</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">(098) 765-4321</p>
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="col-sm-3">
-                <p class="mb-0">Address</p>
-              </div>
-              <div class="col-sm-9">
-                <p class="text-muted mb-0">Bay Area, San Francisco, CA</p>
+                <p class="text-muted mb-0">{{Livingcity}}</p>
               </div>
             </div>
           </div>
