--- a/src/app/courier/courier-navbar/courier-navbar.component.html
+++ b/src/app/courier/courier-navbar/courier-navbar.component.html
@@ -14,7 +14,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a  class="nav-link "  aria-current="page" routerLink="/courior/courior-edit" >Edit</a>
+              <a  class="nav-link "  aria-current="page" routerLink="/courior/courior-edit" >Pending Orders</a>
+            </li>
+            <li class="nav-item">
+              <a  class="nav-link"  aria-current="page" routerLink="/courior/courior-edit" >Accepted Orders</a>
             </li>
            
 
