--- a/src/app/customer/customer-cat-show/customer-cat-show.component.html
+++ b/src/app/customer/customer-cat-show/customer-cat-show.component.html
@@ -1,3 +1,7 @@
+
+
+
+
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -30,7 +34,7 @@
             </div>
         </div>
 
-        <ng-container *ngFor="let item of catList "   >
+        <ng-container *ngFor="let item of catList | filter:searchKey:'name' "   >
             <div class="card  col-md-3 bg-light" style="width:250px;position: relative;  align-self: start;" (click)="click_cat(item)" >
                 <div style="text-align: center;">
                     <img src="{{item.vegtable_image}}">
