--- a/src/app/landing-nav/landing-nav.component.html
+++ b/src/app/landing-nav/landing-nav.component.html
@@ -25,8 +25,8 @@
          
         </ul>
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <input class="form-control me-2" type="search" placeholder="Search" [(ngModel)] ="searchTerm"  [ngModelOptions]="{standalone: true}" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit" (click)="onsearch()">Search</button>
         </form>
       </div>
     </div>
