--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,6 +6,15 @@
           <div class="col-lg-6 col-md-12 mb-4">
             <h5 class="mb-3 text-dark">footer content</h5>
             <p>
+              Feel the freshness of Vegetables for an unbeatable price
+
+              Copyright © 2022 [Company Name]. All Rights Reserved.
+
+              [Company Name] is a registered trademark.
+
+              Terms of Use | Privacy Policy
+
+              Contact us: [Email] | [Phone Number]
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
               molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
               voluptatem veniam, est atque cumque eum delectus sint!
