--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,13 +8,13 @@
             <p>
               Feel the freshness of Vegetables for an unbeatable price
 
-              Copyright © 2022 [Company Name]. All Rights Reserved.
+              Copyright © 2022 Safe Food. All Rights Reserved.
 
-              [Company Name] is a registered trademark.
+              Safe Food is a registered trademark.
 
               Terms of Use | Privacy Policy
 
-              Contact us: [Email] | [Phone Number]
+              Contact us: contact@safefood.com | +94 34 568 1383
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
               molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
               voluptatem veniam, est atque cumque eum delectus sint!
