--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,18 +6,16 @@
           <div class="col-lg-6 col-md-12 mb-4">
             <h5 class="mb-3 text-dark">footer content</h5>
             <p>
-              Feel the freshness of Vegetables for an unbeatable price
+              Feel the freshness of Vegetables for an unbeatable price. <br>
 
-              Copyright © 2022 Safe Food. All Rights Reserved.
+              Copyright © 2022 Safe Food. All Rights Reserved.  <br>
 
-              Safe Food is a registered trademark.
+              Safe Food is a registered trademark.  <br>
 
-              Terms of Use | Privacy Policy
+              Terms of Use | Privacy Policy <br>
 
-              Contact us: contact@safefood.com | +94 34 568 1383
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-              molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-              voluptatem veniam, est atque cumque eum delectus sint!
+              Contact us: contact@safefood.com | +94 34 568 1383  <br>
+              
             </p>
           </div>
           <div class="col-lg-3 col-md-6 mb-4">
