--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -22,7 +22,8 @@
             <h5 class="mb-3 text-dark">links</h5>
             <ul class="list-unstyled mb-0">
               <li class="mb-1">
-                <a href="#!" style="color: #4f4f4f;">FAQ</a>
+                
+                <a href="#row1"style="color: #4f4f4f;">FAQ</a>
               </li>
               <li class="mb-1">
                 <a href="#!" style="color: #4f4f4f;">Classes</a>
