dynamic loadings completed

--- a/src/app/admin/edit-order/edit-order.component.html
+++ b/src/app/admin/edit-order/edit-order.component.html
@@ -64,7 +64,7 @@
     <div *ngIf="pro_null" style="text-align: center;font-style: italic;">
   
       <br>
-      <h4>No Category!</h4>
+      <h4>No Orders to assign!</h4>
       <br>
       <br>
   </div>
