--- a/src/app/courier/courier-acc/courier-acc.component.html
+++ b/src/app/courier/courier-acc/courier-acc.component.html
@@ -64,19 +64,19 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col-sm-3">
-                      <p class="mb-0">Orders</p>
+                      <p class="mb-0">Deliveries not completed</p>
                     </div>
                     <div class="col-sm-9">
-                      <p class="text-muted mb-0">5</p>
+                      <p class="text-muted mb-0">{{size}}</p>
                     </div>
                   </div>
                   <hr>
                   <div class="row">
                     <div class="col-sm-3">
-                      <p class="mb-0">Completed</p>
+                      <p class="mb-0">Completed deliveries</p>
                     </div>
                     <div class="col-sm-9">
-                      <p class="text-muted mb-0">6</p>
+                      <p class="text-muted mb-0">{{size2}}</p>
                     </div>
                   </div>
                 </div>
