--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
       <div class="container p-4">
         <div class="row">
           <div class="col-lg-6 col-md-12 mb-4">
-            
+            <h5 class="mb-3 text-dark">Safe Food</h5>
             <p>
               Feel the freshness of Vegetables for an unbeatable price. <br>
 
