--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,7 +19,7 @@
             </p>
           </div>
           <div class="col-lg-3 col-md-6 mb-4">
-            <h5 class="mb-3 text-dark">links</h5>
+            <h5 class="mb-3 text-dark">Links</h5>
             <ul class="list-unstyled mb-0">
               <li class="mb-1">
                 
