--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -37,7 +37,7 @@
             </ul>
           </div>
           <div class="col-lg-3 col-md-6 mb-4">
-            <h5 class="mb-1 text-dark">opening hours</h5>
+            <h5 class="mb-1 text-dark">Opening Hours</h5>
             <table class="table" style="border-color: #666;">
               <tbody>
                 <tr>
