--- a/src/app/admin/admin-nav/admin-nav.component.html
+++ b/src/app/admin/admin-nav/admin-nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/admin">
+      <a class="navbar-brand" href="/admin/editcat">
         <img src={{image}} alt="" width="30" height="24" class="logo-image">
         {{name}}'s Admin Account
       </a>
